# haskell-webservice

./: .gitignore  Makefile  README.md  default.nix  nixpkgs.json  pkgs.nix  project.cabal  shell.nix
app/: Main.hs
golden/: User.json
src/: KafkaDemo.hs  Main.hs  ScottyDemo.hs  User.hs
test/: Arbitraries.hs  DiscoverTest.hs  UserSpec.hs
