Name:                scotty-examples
Version:             0.1
Build-type:          Simple
Cabal-version:       >= 1.18
Description:         Example programs using @scotty@
tested-with:         GHC == 7.6.3             
                   , GHC == 8.6.3

library
  exposed-modules:     User
                       KafkaDemo
                       ScottyDemo
  default-language:    Haskell2010
  hs-source-dirs:      src
  default-extensions:   OverloadedStrings
                        , NoImplicitPrelude
                        , DeriveGeneric
  build-depends:       base >= 4.6 && < 5,
                       bytestring,
                       http-types,
                       mtl,
                       random,
                       scotty,
                       streamly,
                       aeson,
                       text,
                       wai-extra,
                       hw-kafka-client,
                       protolude
                       -- aeson-extra does not build... (looks like a dependency version conflict with tasty)      
  ghc-options: -Wall -fno-warn-orphans

executable webapp
  main-is:             Main.hs
  default-language:    Haskell2010
  hs-source-dirs:      app
  default-extensions:   OverloadedStrings
                        , NoImplicitPrelude
                        , DeriveGeneric
  build-depends:       base,
                       scotty-examples
  ghc-options: -Wall -threaded

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base
    , scotty-examples  
    , tasty
    , tasty-discover
    , tasty-hspec
    , tasty-hunit
    , tasty-quickcheck
    , hspec
    , QuickCheck
    -- provides Arb. instances for types such as Text, UUID, ...
    , quickcheck-instances
    , aeson
    , scotty-examples
    , hspec-golden-aeson
    -- to build generic Arbitrary instances    
    , generic-random
  default-language: Haskell2010
  default-extensions: OverloadedStrings
  other-modules:
      Arbitraries
      UserSpec
      DiscoverTest